Black Theme Projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -9,6 +9,7 @@
 
 
 		html {
+			background: #1c1c1c;
 			width: 100%;
 			padding: 0;
 			margin: 0;
@@ -97,7 +98,8 @@
 		.project {
 			margin: 2em;
 			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-			background: #fcfcfc;
+			background: #000;
+			color: #fff;
 		}
 
 		.project label {
@@ -116,7 +118,7 @@
 
 		.description {
 			margin-top: 5em;
-			background: #40b3a2;
+			background: #133d3c;
 			color: #fff;
 			padding: 4rem;
 		}
@@ -222,7 +224,7 @@
 		  }
 		  }
 	</style>
-	<title>Projects by abhibolega</title>
+	<title>Excel Projects by abhibolega</title>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162665823-1"></script>
@@ -240,7 +242,7 @@
 	<meta name="theme-color" content="#18454A">
 	<meta name="author" content="Abhinav Mishra">
 	<meta name="keywords" content="abhibolega, Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
-	<meta content='Projects by <a href="https://abhibolega.github.io">abhibolega</a>, a page to showcase the different projects and other things I make.' name='description'/>
+	<meta content='Excel Projects by <a href="https://abhibolega.github.io">abhibolega</a>, a page to showcase the different excel based projects and other things I make.' name='description'/>
 	<link rel="icon" type="image/png" href="../favicon.png">
 </head>
 <body>
@@ -249,7 +251,7 @@
 <!-- Navbar -->
 		<nav>
 			<div class="heading">
-				Projects by&nbsp &nbsp<font style="font-size: 2em;" face="khand">abhibolega</font>
+				Excel Projects by&nbsp &nbsp<font style="font-size: 2em;" face="khand">abhibolega</font>
 				<input type="text" class="searchbox" id="searchbox" placeholder="Search Project">
 				<h3 class="backlink"><a href=".."> ◄ Back to my Website</a></h3>
 			</div>	
@@ -276,7 +278,7 @@
 		</section>
 		<div id="amzn-assoc-ad-be5e9d4d-1c6f-4839-b594-a85a14385551"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=be5e9d4d-1c6f-4839-b594-a85a14385551"></script>
 		<section class="description">
-			<b>Projects by <font face="khand">abhibolega</font>, a section of my website where I list all the useful small projects which can be used by anyone for free. If you wish, you can donate and support my work. If you want the raw files (to modify my projects for personal use), contact me using my blog.</b><br><br><br>
+			<b>Excel Projects by <font face="khand">abhibolega</font>, a section of my website where I list all the useful small excel based projects which can be used by anyone for free. If you wish, you can donate and support my work. If you want the raw files (to modify my projects for personal use), contact me using my blog.</b><br><br><br>
 			<center><img src="../qr.jpeg" height="200rem"></center>
 
 		</section>
