--- a/unitech/index.html
+++ b/unitech/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162665823-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-162665823-1');
-	</script>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<meta name="author" content="Abhinav Mishra">
-
+	<meta name="description" content="UNITECH TECHNOCRATS is a Kala-Amb (H.P) based Water Treatment Consultants, Solution Providers an Equipment supplier company in India providing water treatment services & Chemicals to Industrial & Domestic clients all over India.">
+	<meta name="keywords" content="UNITECH, Ambala, Chemicals, UV, Sanitize">
 	<title>Unitech Technocrats</title>
 
 	<link rel="icon" type="image/jpeg" href="favicon.jpg">
@@ -36,7 +28,9 @@
 	<link href="01-cv-portfolio/css/responsive.css" rel="stylesheet">
 </head>
 <body>
+	<center>
 <h1>Welcome to the Home of Unitech Technocrats!!</h1>
 <marquee direction=left>Stay Tuned. We are Coming Soon!</marquee>
+</center>
 </body>
 </html>
