--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>PATNA</h5>
-								<h5>BR, IN 800003</h5>
+								<h5>Patna</h5>
+								<h5>BR,  IN  800003</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
