--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 				<div class="experience margin-b-50">
 						<h4><b>Introduction to Cryptocurrencies and Blockchain</b></h4>
 						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
-						<h6 class="margin-t-10">Date of Certification: January 2020</h6>
+						<h6 class="margin-t-10">Date of Completion: November 2019</h6>
 						<p class="margin-tb-30">Credential ID:  N/A</p>
 					</div><!-- experience -->		
 
