--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 						<div class="info">
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
-								<h5>+91 98523 26518</h5>
-								<h6>Contact Number</h6>
+								<h5>+91 95177 34520</h5>
+								<h6>Whatsapp</h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
