--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 	<footer>
 		<p class="copyright">
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ion-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> | Personalsed by <a href="https://www.linkedin.com/in/abhibolega/">Abhinav Mishra</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made by <a href="https://www.linkedin.com/in/abhibolega/">Abhinav Mishra</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 		</p>
 
