--- a/index.html
+++ b/index.html
@@ -367,6 +367,11 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 					<img src="designs/india.jpg" alt=""></a>
 			</div><!-- p-item -->
 
+			<div class="p-item web-design">
+				<a href="designs/ipl.jpg" data-fluidbox>
+					<img src="designs/ipl.jpg" alt=""></a>
+			</div><!-- p-item -->
+
 			<div class="p-item branding">
 				<a href="designs/ayushman.jpg" data-fluidbox>
 					<img src="designs/ayushman.jpg" alt=""></a>
@@ -397,14 +402,24 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 					<img src="designs/jeetu.jpg" alt=""></a>
 			</div><!-- p-item -->
 
+									<div class="p-item branding">
+				<a href="designs/star.jpg" data-fluidbox>
+					<img src="designs/star.jpg" alt=""></a>
+			</div><!-- p-item -->
+
 			<div class="p-item web-design">
 				<a href="designs/dhoni2.jpg" data-fluidbox>
 					<img src="designs/dhoni2.jpg" alt=""></a>
 			</div><!-- p-item -->
 
-			<div class="p-item web-design">
-				<a href="designs/ipl.jpg" data-fluidbox>
-					<img src="designs/ipl.jpg" alt=""></a>
+									<div class="p-item branding">
+				<a href="designs/snow.jpg" data-fluidbox>
+					<img src="designs/snow.jpg" alt=""></a>
+			</div><!-- p-item -->
+
+									<div class="p-item branding">
+				<a href="designs/octopus.jpg" data-fluidbox>
+					<img src="designs/octopus.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 
