--- a/index.html
+++ b/index.html
@@ -442,9 +442,9 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 						
 						<ul class="list margin-b-30">
 							<li><a href="synopsis.pdf"  target="_blank">Synopsis of my Project at Indian Institute of Petroleum</a></li>
-							<li><a href="hydrocracking_report_abhinavmishra.pdf"  target="_blank">Hydrocracking of Vacuum Residue into Middle Distillates using Slurry Phase Technology</a></li>
+							<li><a href="wallpapers"  target="_blank">Wallpapers by Abhinav Mishra</a></li>
 							<li><a href="https://abhibolega.blogspot.com/p/me-as-digital-artist.html"  target="_blank">Me as a Digital Artist</a></li>
-							<li><a href="projects">Excel Projects by abhibolega</a></li>
+							<li><a href="projects" target="_blank">Excel Projects by abhibolega</a></li>
 						</ul>
 					</div><!-- experience -->
 				
