added umbrella wallpaper

--- a/wallpapers/index.html
+++ b/wallpapers/index.html
@@ -40,6 +40,14 @@
 		</div>
 		<div class="wallpaper">
 			<h2>
+				Umbrella
+			</h2>
+			<img src="umbrella.jpg">
+			<br>
+			<a href="https://drive.google.com/file/d/1Fwk0bGNypEeGp51URlePKklf-UfbYlv5/view?usp=sharing" target="_blank"><button>Download</button></a>
+		</div>
+		<div class="wallpaper">
+			<h2>
 				Winter Night
 			</h2>
 			<img src="winternight.jpg">
