--- a/wallpapers/index.html
+++ b/wallpapers/index.html
@@ -32,6 +32,14 @@
 	<div class="container">
 		<div class="wallpaper">
 			<h2>
+				Wakanda Forever
+			</h2>
+			<img src="black-panther.jpg">
+			<br>
+			<a href="https://drive.google.com/file/d/15P5-SrjYEZLouP6tqVF12R02XYnHntCw/view?usp=sharing" target="_blank"><button>Download</button></a>
+		</div>
+		<div class="wallpaper">
+			<h2>
 				Plants - Minimal
 			</h2>
 			<img src="plants.jpg">
