--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
 					<div class="intro">
 						<div class="profile-img"><img id="changer" src="dp1.jpg" alt="Profile_Photo"></div>
 						<h2><b>Abhinav Mishra</b></h2>
-						<h4 class="font-yellow">Engineering Student, Amateur Artist</h4>
+						<h4 class="font-yellow">Engineer, Amateur Artist</h4>
 						<ul class="information margin-tb-30">
-							<li><b>BORN : </b>May 26, 1998</li>
 							<li><b>EMAIL : </b><a href="mailto:mishraabhinav123@gmail.com">mishraabhinav123@gmail.com</a></li>
 						</ul>
 						<ul class="social-icons">
