--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
             background: #8A90FF;
         }
 
+        .designs {
+            margin-top: 800px;
+        }
+
+        .sampler {
+            height: 30em;
+        }
+
 
         /******************CSS for the Browser Scrollbar Starts Here!******************/
 
@@ -145,7 +153,7 @@
         <div class="intro-name">
             <p>I am <font>Abhinav</font>.</p>
         </div>
-        <div class="blog-link"><a href="https:abhibolega.blogspot.com" target="_blank">visit my blog.</a></div>
+        <div class="blog-link"><a href="https://abhibolega.blogspot.com" target="_blank">visit my blog.</a></div>
     </body>
     <script>
         var maxX = 200; // max value of scroll for splitting
