--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="intro-name">
             <p>I am <font>Abhinav</font>.</p>
         </div>
-        <div class="blog-link"><a href="https://abhibolega.blogspot.com" target="_blank">visit my blog.</a></div>
+        <div class="blog-link"><a href="https://abhibolega.wordpress.com" target="_blank">visit my blog.</a></div>
     </body>
     <script>
         var maxX = 200; // max value of scroll for splitting
