--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             color: #1D1747;
         }
 
+        .audio {
+        	font-size: 2em;
+            font-family: Champagne_Limousines;
+        }
+
         .intro-name font {
             text-decoration-line: underline;
             text-decoration-style: solid;
@@ -120,6 +125,13 @@
             height: 30em;
         }
 
+        .spotify {
+        	margin-left: 30%;
+        	width: 600px;
+        	margin-top: 1300px;
+        	padding-bottom: 100px;
+        }
+
 
         /******************CSS for the Browser Scrollbar Starts Here!******************/
 
@@ -153,7 +165,12 @@
         <div class="intro-name">
             <p>I am <font>Abhinav</font>.</p>
         </div>
-        <div class="blog-link"><a href="https://abhibolega.wordpress.com" target="_blank">visit my blog.</a></div>
+        <div class="blog-link"><a href="https://abhibolega.wordpress.com" target="_blank">visit my blog</a></div>
+        <br>
+        <div class="spotify">
+        	<center><p class="audio">the audio version the sports section of my blog.</p></center>
+        	<iframe src="https://open.spotify.com/embed-podcast/show/1hZ23wBEyhKYwaWXhxzHHh" width="100%" height="225" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
     </body>
     <script>
         var maxX = 200; // max value of scroll for splitting
