--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,7 @@
 </head>
 <style type="text/css">
 	body{
+	    width: 1920px;	
             cursor: default;
             background-image: url('portfolio.png');
             background-repeat: no-repeat;
