--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,7 @@
             height: 4534px;
         }
 
+
     @media (max-width: 1366px) {
     html {
         background-image: url(portfolio.png);
@@ -27,6 +28,20 @@
     img {
         height: 411px;
     }
+    }
+
+    @media (min-width: 1280px) and (max-width: 1360px) {
+    html {
+        background-image: url(portfolio.png);
+        background-size: cover;
+        height: 3050px;
+    }
+
+    img {
+        height: 385px;
+    }
+    } 
+   
 }    
 </style>
 <body>
