--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,6 @@
             height: 4534px;
         }
 
-
     @media (max-width: 1366px) {
     html {
         background-image: url(portfolio.png);
@@ -30,7 +29,19 @@
     }
     }
 
-    @media (min-width: 1280px) and (max-width: 1360px) {
+    @media (max-width: 1536px) {
+    html {
+        background-image: url(portfolio.png);
+        background-size: cover;
+        height: 3660px;
+    }
+
+    img {
+        height: 462px;
+    }
+    }
+
+    @media (max-width: 1280px) {
     html {
         background-image: url(portfolio.png);
         background-size: cover;
@@ -39,9 +50,8 @@
 
     img {
         height: 385px;
-    }
-    } 
-   
+    }  
+    }  
 }    
 </style>
 <body>
