--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,17 +17,18 @@
             height: 4534px;
         }
 
-    @media (max-width: 1366px) {
+        @media (min-width: 3840px) {
     html {
         background-image: url(portfolio.png);
         background-size: cover;
-        height: 3260px;
+        height: 9100px;
     }
 
     img {
-        height: 411px;
+        height: 1156px;
     }
     }
+
 
     @media (max-width: 1536px) {
     html {
@@ -41,6 +42,19 @@
     }
     }
 
+    @media (max-width: 1366px) {
+    html {
+        background-image: url(portfolio.png);
+        background-size: cover;
+        height: 3260px;
+    }
+
+    img {
+        height: 411px;
+    }
+    }
+
+
     @media (max-width: 1280px) {
     html {
         background-image: url(portfolio.png);
@@ -51,7 +65,8 @@
     img {
         height: 385px;
     }  
-    }  
+    } 
+
 }    
 </style>
 <body>
