--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 
         gtag('config', 'UA-162665823-1');
         </script>
-        <link rel="icon" type="image/svg" href="icons/favicon.svg">
+        <link
+          href="icons/favicon-black.svg"
+          rel="icon"
+          media="(prefers-color-scheme: light)"
+        />
+        <link
+          href="icons/favicon-white.svg"
+          rel="icon"
+          media="(prefers-color-scheme: dark)"
+        />
         <title>Abhinav Mishra</title>
         <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
