--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="#">Interests</a>
               </li>
             </ul>
-            <button type="button" class="btn btn-outline-light">Download Resume</button>
+            <button type="button" class="btn btn-outline-light"><a href="abhinav_s_resume.pdf">Download Resume</a></button>
           </div>
         </div>
       </nav>
