--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <p class="lead my-4">
                 Hey there, <br>
                 I am an Engineer working in the Chemical Industry as a Process Engineer.
-                Along with that, I am a Graphic Designer and a Full Stack Web Developer. <br>
+                I am also a Graphic Designer and a Full Stack Web Developer. <br>
             </p>
             <div class="my-5">
                 <p class="lead">
@@ -65,8 +65,8 @@
                 </p>
             </div>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3">Drop an Email</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Visit my Blog</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3"><a href="mailto:mishraabhinav123@gmail.com">Drop an Email</a></button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4"><a href = "https://abhibolega.wordpress.com">Visit my Blog</a></button>
               </div>
             </div>
           </div>
