--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="#">Interests</a>
               </li>
             </ul>
-            <button type="button" class="btn btn-outline-light"><a href="abhinav_s_resume.pdf">Download Resume</a></button>
+            <button type="button" class="btn btn-outline-light"><a href="abhinav_s_resume.pdf" target="_blank">Download Resume</a></button>
           </div>
         </div>
       </nav>
@@ -66,7 +66,7 @@
             </div>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3"><a href="mailto:mishraabhinav123@gmail.com">Drop an Email</a></button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4"><a href = "https://abhibolega.wordpress.com">Visit my Blog</a></button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4"><a href = "https://abhibolega.wordpress.com" target="_blank">Visit my Blog</a></button>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
                   <span class="footer-logo">abhibolega</span>
                 </a>
               </div>
-              <div class="mb-3 mb-md-0 text-center text-body-secondary"> © 2023, Abhinav Mishra</div>
+              <div class="mb-3 mb-md-0 text-center text-body-secondary"> © 2024, Abhinav Mishra</div>
               <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a class="text-body-secondary" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/></svg>
